--- a/app.html
+++ b/app.html
@@ -142,14 +142,19 @@
     .pp-wrap{ max-width:1200px; margin:0 auto; padding:0 20px; }
 
     /* Header */
-    .pp-header{ position:sticky; top:0; z-index:50; padding:14px 0; backdrop-filter:saturate(140%) blur(8px); }
-    .pp-headerbar{
-      background:var(--card2);
-      border:1px solid var(--line);
-      border-radius:20px;
-      box-shadow:var(--shadow);
-      overflow:hidden;
-    }
+    .pp-header{
+  position: sticky;
+  top: 0;
+  z-index: 50;
+  padding: 0;
+  backdrop-filter: none;
+}
+
+.pp-headerbar{
+  background: var(--card);
+  border-radius: 0 0 20px 20px;
+  box-shadow: none;
+}
 
     .pp-toprow{
       display:flex;
