--- a/app.html
+++ b/app.html
@@ -142,7 +142,7 @@
     .pp-wrap{ max-width:1200px; margin:0 auto; padding:0 20px; }
 
     /* Header */
-    .pp-header{ position:sticky; top:0; z-index:50; padding:14px 0; backdrop-filter:saturate(140%) blur(8px); }
+    .pp-header{ position:static; top:auto; z-index:50; padding:14px 0; backdrop-filter:saturate(140%) blur(8px); }
     .pp-headerbar{
       background:var(--card);
       border:1px solid var(--line);
@@ -482,8 +482,8 @@
 
     /* Right column sticky */
     .rightSide{
-      position:sticky;
-      top:92px; /* below sticky header */
+      position:static;
+      top:auto
       align-self:start;
       display:flex;
       flex-direction:column;
