--- a/app.html
+++ b/app.html
@@ -686,7 +686,7 @@
           </div>
           <div class="pp-trustitem" title="Payments">
             <span class="pp-dot" aria-hidden="true"></span>
-            <span class="pp-trusttxt"><b>One-time</b> PRO unlock (Gumroad checkout)</span>
+            <span class="pp-trusttxt"><b>One-time</b> PRO unlock </span>
           </div>
           <div class="pp-trustitem" title="Privacy">
             <span class="pp-dot" aria-hidden="true"></span>
