--- a/app.html
+++ b/app.html
@@ -146,7 +146,7 @@
     .pp-headerbar{
       background:var(--card);
       border:1px solid var(--line);
-      border-radius:20px;
+      border-radius: 0 0 20px 20px;
       box-shadow:var(--shadow);
       overflow:hidden;
     }
