--- a/app.html
+++ b/app.html
@@ -326,10 +326,10 @@
 
     /* Main layout */
     .wrap{
-      max-width:1100px;
-      margin:22px auto 90px;
-      padding:0 18px;
-    }
+  max-width:1100px;
+  margin:0 auto 90px;
+  padding:12px 18px 0;
+}
     .grid{
       display:grid;
       grid-template-columns:1.65fr 1fr;
@@ -631,6 +631,20 @@
       .pp-nav{ width:100%; justify-content:flex-start; }
       .select{ max-width:100%; }
     }
+    /* ===== PRO HEADER SCROLL EFFECT ===== */
+
+.pp-header{
+  transition: all .25s ease;
+}
+
+.pp-header.scrolled{
+  padding: 6px 0;
+}
+
+.pp-header.scrolled .pp-headerbar{
+  box-shadow: 0 8px 24px rgba(16,24,40,.12);
+  border-radius: 14px;
+}
   </style>
 </head>
 
@@ -1425,6 +1439,16 @@
         fxRow.style.display = "none";
       }
     }
+
+    const header = document.querySelector(".pp-header");
+
+window.addEventListener("scroll", () => {
+  if (window.scrollY > 20) {
+    header.classList.add("scrolled");
+  } else {
+    header.classList.remove("scrolled");
+  }
+});
 
     // Theme + custom controls
     const themeSel = document.getElementById("themeSel");
