--- a/index.html
+++ b/index.html
@@ -667,13 +667,12 @@
     const SUPABASE_ANON = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhzaWdzZnR2ZmtuZWZwZGZzeWFlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzAyNzY4NjksImV4cCI6MjA4NTg1Mjg2OX0.Jkkh9Jd46saYBVipN8bxbWhjmhG6mgaFgtTpirKUAWg";
     const supabase = createClient(SUPABASE_URL, SUPABASE_ANON);
 
-    // Checkout link
     // ✅ Paddle Hosted Checkout links
 const CHECKOUT_URL_PRO = "https://pay.paddle.io/hsc_01kjcns56g20crt51z8j2j9mqc_rrmv98b3szdmp9neyaxw5qmd5cjcb7ya";
-
 const CHECKOUT_URL_PROPLUS = "#"; // add PRO+ later
-    const buyBtn = document.getElementById("buyBtn");
-    buyBtn.href = CHECKOUT_URL;
+
+const buyBtn = document.getElementById("buyBtn");
+buyBtn.href = CHECKOUT_URL_PRO;
 
     // Year
     document.getElementById("yr").textContent = new Date().getFullYear();
