--- a/privacy.html
+++ b/privacy.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
+
   <title>Privacy Policy — ProfitPilot</title>
   <meta name="description" content="Privacy policy for ProfitPilot by UKwebtools. Learn what data we collect, why we collect it, and your rights.">
-  <link rel="icon" href="https://ukwebtools.com/favicon.svg" type="image/svg+xml">
   <meta name="robots" content="index,follow">
   <link rel="canonical" href="https://profitpilot.ukwebtools.com/privacy.html">
+  <link rel="icon" href="https://ukwebtools.com/favicon.svg" type="image/svg+xml">
 
   <!-- Google Analytics (GA4) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-F12747YWBN"></script>
@@ -18,13 +19,15 @@
     gtag('config', 'G-F12747YWBN', { anonymize_ip: true });
   </script>
 
+  <!-- Microsoft Clarity -->
   <script type="text/javascript">
     (function(c,l,a,r,i,t,y){
         c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
         t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
         y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
     })(window, document, "clarity", "script", "vjsgka2ywg");
-</script>
+  </script>
+
   <!-- Open Graph -->
   <meta property="og:title" content="Privacy Policy — ProfitPilot">
   <meta property="og:description" content="What data ProfitPilot collects, how it’s used, and your choices.">
@@ -35,71 +38,104 @@
     :root{
       --bg:#f7f9fc; --bg2:#eef3ff;
       --txt:#0b1220; --muted:#5b6474;
-      --card:#fff; --line:rgba(16,24,40,.10);
+      --card:rgba(255,255,255,.80);
+      --line:rgba(16,24,40,.10);
       --accent:#0ea5a4; --accent2:#4f46e5;
       --shadow:0 14px 36px rgba(16,24,40,.08);
+      --shadow2:0 16px 44px rgba(16,24,40,.10);
+      --radius:22px;
+      --h-bg:rgba(255,255,255,.78);
     }
+
     *{box-sizing:border-box}
     html{scroll-behavior:smooth}
     body{
-      margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:var(--txt);
+      margin:0;
+      font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+      color:var(--txt);
       background:
         radial-gradient(900px 520px at 16% 0%, rgba(14,165,164,.14), transparent 55%),
         radial-gradient(900px 520px at 84% 0%, rgba(79,70,229,.12), transparent 55%),
         linear-gradient(180deg,var(--bg2),var(--bg));
     }
+
     a{color:var(--accent);text-decoration:none}
     a:hover{text-decoration:underline}
-    :focus-visible{outline:3px solid rgba(79,70,229,.55);outline-offset:3px;border-radius:10px}
+    :focus-visible{outline:3px solid rgba(79,70,229,.55);outline-offset:3px;border-radius:12px}
 
-    .wrap{max-width:980px;margin:0 auto;padding:18px 16px 50px}
+    .wrap{max-width:980px;margin:0 auto;padding:14px 16px 54px}
 
-    /* NAV */
-    .pp-navwrap{max-width:1200px;margin:0 auto;padding:14px 0;position:relative;z-index:50}
-    .pp-nav{display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap}
-    .pp-left,.pp-right{display:flex;gap:10px;flex-wrap:wrap;align-items:center}
+    /* ====== APP-STYLE HEADER ====== */
+    .pp-header{position:sticky; top:10px; z-index:100; margin:10px auto 0}
+    .pp-headerbar{
+      background:var(--h-bg);
+      border:1px solid var(--line);
+      border-radius:18px;
+      box-shadow:0 10px 30px rgba(16,24,40,.08);
+      backdrop-filter:blur(10px);
+      padding:10px;
+    }
+    .pp-row{display:flex;align-items:center;gap:12px;flex-wrap:nowrap}
+    .pp-brand{display:flex;align-items:center;gap:10px;flex:0 0 auto; min-width:200px}
+    .pp-logo{
+      width:40px;height:40px;border-radius:14px;
+      background:linear-gradient(135deg, rgba(14,165,164,.20), rgba(79,70,229,.16));
+      border:1px solid var(--line);
+      display:flex;align-items:center;justify-content:center;
+      font-weight:1000; user-select:none;
+      color:var(--txt);
+    }
+    .pp-title{font-weight:1000;line-height:1.05;color:var(--txt)}
+    .pp-sub{font-size:12px;color:var(--muted);font-weight:700;margin-top:3px}
+
+    .pp-nav{
+      display:flex;align-items:center;gap:10px;
+      flex:1 1 auto; justify-content:flex-end;
+      overflow-x:auto; -webkit-overflow-scrolling:touch;
+      padding:2px 4px; scrollbar-width:thin;
+    }
+    .pp-nav::-webkit-scrollbar{height:8px}
+    .pp-nav::-webkit-scrollbar-thumb{background:rgba(16,24,40,.14);border-radius:999px}
+
     .pp-btn{
-      padding:10px 14px;border-radius:999px;border:1px solid rgba(16,24,40,.10);
-      background:#fff;font-weight:800;color:#0b1220;
+      padding:10px 14px;border-radius:999px;border:1px solid var(--line);
+      background:rgba(255,255,255,.92);color:var(--txt);
+      font-weight:900;
       box-shadow:0 8px 18px rgba(16,24,40,.06);
-      display:inline-flex;gap:8px;align-items:center;
-      transition:transform .10s ease;
+      display:inline-flex;gap:8px;align-items:center;white-space:nowrap;
+      transition:transform .08s ease;
+      cursor:pointer;
     }
     .pp-btn:hover{transform:translateY(-1px);text-decoration:none}
     .pp-btn:active{transform:translateY(0)}
-    .pp-primary{
+    .pp-btn.ghost{background:transparent;box-shadow:none}
+    .pp-btn.primary{
       border:none;color:#fff;
-      background:linear-gradient(135deg,#0ea5a4,#4f46e5);
-      box-shadow:0 14px 28px rgba(79,70,229,.16);
+      background:linear-gradient(135deg,var(--accent),var(--accent2));
+      box-shadow:0 16px 34px rgba(79,70,229,.16);
     }
-    .pp-active{
-      border-color:rgba(14,165,164,.35);
-      background:rgba(14,165,164,.08);
-    }
-    .pp-user{
-      padding:10px 14px;border-radius:999px;border:1px solid rgba(16,24,40,.10);
-      background:rgba(255,255,255,.75);
-      color:rgba(16,24,40,.72);
-      font-weight:800;
-      display:none;
-      max-width:260px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;
-    }
-    .pp-crumbs{
-      margin-top:10px;
-      font-size:12.5px;
-      color:rgba(16,24,40,.62);
-      display:flex;gap:6px;flex-wrap:wrap;align-items:center;
-    }
-    .pp-crumbs a{color:rgba(14,165,164,.95);font-weight:800}
-    .pp-sep{opacity:.55}
 
+    .pp-chip{
+      padding:10px 14px;border-radius:999px;border:1px solid var(--line);
+      background:rgba(255,255,255,.70);
+      color:rgba(16,24,40,.70);
+      font-weight:900;max-width:260px;
+      overflow:hidden;text-overflow:ellipsis;white-space:nowrap;
+      display:none;
+    }
+    @media(max-width:760px){
+      .pp-sub{display:none}
+      .pp-brand{min-width:auto}
+    }
+
+    /* ====== PAGE CARD ====== */
     .card{
       margin-top:14px;
-      background:rgba(255,255,255,.78);
+      background:var(--card);
       border:1px solid var(--line);
-      border-radius:22px;
+      border-radius:var(--radius);
       padding:20px;
-      box-shadow:var(--shadow);
+      box-shadow:var(--shadow2);
     }
 
     h1{margin:0 0 8px;font-size:28px;letter-spacing:-.02em}
@@ -120,10 +156,53 @@
       padding:12px;
       background:rgba(255,255,255,.86);
     }
-    .hr{height:1px;background:rgba(16,24,40,.10);margin:14px 0}
-    footer{
+
+    /* ====== CLEAN FOOTER ====== */
+    .pp-foot{
       margin-top:18px;padding-top:14px;border-top:1px solid var(--line);
-      text-align:center;color:rgba(16,24,40,.62);font-size:12.5px;line-height:1.7;
+    }
+    .pp-footgrid{
+      display:grid;
+      grid-template-columns:1.2fr .8fr;
+      gap:12px;
+      align-items:start;
+    }
+    @media(max-width:820px){ .pp-footgrid{grid-template-columns:1fr} }
+    .pp-footbrand{color:var(--txt);font-weight:1000}
+    .pp-footmut{
+      margin-top:6px;
+      color:rgba(16,24,40,.62);
+      font-size:12.5px;
+      line-height:1.7
+    }
+    .pp-footlinks{
+      display:flex;flex-wrap:wrap;gap:8px;justify-content:flex-end;
+    }
+    @media(max-width:820px){ .pp-footlinks{justify-content:flex-start} }
+    .pp-footlinks a{
+      padding:8px 10px;border-radius:999px;
+      border:1px solid var(--line);
+      background:rgba(255,255,255,.86);
+      font-weight:850;
+      color:var(--txt);
+    }
+    .pp-footbottom{
+      margin-top:12px;padding-top:12px;
+      border-top:1px solid rgba(16,24,40,.08);
+      color:rgba(16,24,40,.62);
+      font-size:12.5px;
+      line-height:1.7;
+      display:flex;
+      justify-content:space-between;
+      gap:10px;
+      flex-wrap:wrap;
+      align-items:center;
+    }
+
+    @media (prefers-reduced-motion: reduce){
+      html{scroll-behavior:auto}
+      .pp-btn{transition:none}
+      .pp-btn:hover{transform:none}
     }
   </style>
 </head>
@@ -131,54 +210,33 @@
 <body>
   <div class="wrap">
 
-    <!-- NAV -->
-    <div class="pp-navwrap" role="navigation" aria-label="Primary">
-      <div class="pp-nav">
-        <div class="pp-left">
-          <a class="pp-btn" href="https://ukwebtools.com/" rel="nofollow">← UKwebtools</a>
-          <a class="pp-btn" href="index.html">Home</a>
-          <a class="pp-btn" href="pricing.html">Pricing</a>
-          <a class="pp-btn" href="reviews.html">Reviews</a>
-          <a class="pp-btn" href="help.html">How to use</a>
-          <a class="pp-btn" href="faq.html">FAQ</a>
-          <a class="pp-btn pp-active" href="privacy.html" aria-current="page">Privacy</a>
-          <a class="pp-btn" href="terms.html">Terms</a>
-          <a class="pp-btn" href="refunds.html">Refund Policy</a>
-        </div>
+    <!-- ====== SIMPLE APP HEADER ====== -->
+    <header class="pp-header" role="navigation" aria-label="Primary">
+      <div class="pp-headerbar">
+        <div class="pp-row">
+          <div class="pp-brand" aria-label="ProfitPilot">
+            <div class="pp-logo" aria-hidden="true">PP</div>
+            <div>
+              <div class="pp-title">ProfitPilot</div>
+              <div class="pp-sub">Independent tool by UKwebtools</div>
+            </div>
+          </div>
 
-        <div class="pp-right">
-          <span class="pp-user" id="ppUserChip" title="Signed in user">Signed in</span>
+          <nav class="pp-nav" aria-label="Main">
+            <a class="pp-btn ghost" href="index.html">Home</a>
+            <a class="pp-btn" href="help.html">How to use</a>
 
-          <!-- Signed OUT -->
-          <a class="pp-btn pp-primary" id="ppAuthBtn" href="login.html">Log in</a>
+            <span class="pp-chip" id="ppUserChip" aria-live="polite">—</span>
 
-          <!-- Signed IN -->
-          <a class="pp-btn pp-primary" id="ppOpenBtn" href="app.html" style="display:none">Open app</a>
-          <a class="pp-btn" id="ppLogoutBtn" href="#" style="display:none">Log out</a>
+            <a class="pp-btn primary" id="ppOpenBtn" href="app.html" style="display:none">Open app</a>
+            <a class="pp-btn primary" id="ppAuthBtn" href="login.html">Log in</a>
+            <a class="pp-btn" id="ppLogoutBtn" href="#" style="display:none">Log out</a>
+          </nav>
         </div>
       </div>
+    </header>
 
-      <div class="pp-crumbs" aria-label="Breadcrumb">
-        <a href="https://ukwebtools.com/">UKwebtools</a>
-        <span class="pp-sep">›</span>
-        <a href="index.html">ProfitPilot</a>
-        <span class="pp-sep">›</span>
-        <span>Privacy</span>
-      </div>
-
-      <script type="application/ld+json">
-      {
-        "@context":"https://schema.org",
-        "@type":"BreadcrumbList",
-        "itemListElement":[
-          {"@type":"ListItem","position":1,"name":"UKwebtools","item":"https://ukwebtools.com/"},
-          {"@type":"ListItem","position":2,"name":"ProfitPilot","item":"https://profitpilot.ukwebtools.com/index.html"},
-          {"@type":"ListItem","position":3,"name":"Privacy","item":"https://profitpilot.ukwebtools.com/privacy.html"}
-        ]
-      }
-      </script>
-    </div>
-
+    <!-- ====== CONTENT ====== -->
     <div class="card">
       <h1>Privacy Policy</h1>
       <p class="meta">Last updated: <span id="d"></span></p>
@@ -242,6 +300,7 @@
       <ul>
         <li><b>Supabase</b>: authentication and database hosting for accounts, entitlements, and reviews.</li>
         <li><b>Payment provider</b> (shown at checkout): processes payments, may calculate/apply VAT/taxes, and issues receipts.</li>
+        <li><b>Analytics</b>: Google Analytics (GA4) and Microsoft Clarity may collect usage and device data (where enabled) to help us improve the product.</li>
       </ul>
 
       <h2>International transfers</h2>
@@ -259,8 +318,8 @@
 
       <h2>Cookies and analytics</h2>
       <p>
-        ProfitPilot does not intentionally use advertising cookies. If we add analytics in the future, we will update this policy.
         Some essential cookies/local storage may be used by authentication or the application to function (e.g., session management).
+        Analytics tools (if enabled) may set cookies or similar identifiers to measure usage and improve the service.
       </p>
 
       <h2>Security</h2>
@@ -287,12 +346,30 @@
         We may update this policy from time to time. The “Last updated” date will reflect the latest version.
       </p>
 
-      <footer>
-        <div>© <span id="yr"></span> UKwebtools • ProfitPilot</div>
-        <div style="margin-top:6px">
-          <a href="terms.html">Terms</a> ·
-          <a href="refunds.html">Refund Policy</a> ·
-          <a href="reviews.html">Reviews</a>
+      <!-- ====== CLEAN FOOTER ====== -->
+      <footer class="pp-foot" role="contentinfo">
+        <div class="pp-footgrid">
+          <div>
+            <div class="pp-footbrand">ProfitPilot</div>
+            <div class="pp-footmut">
+              Independent tool by UKwebtools. Not affiliated with marketplaces/platforms/payment providers.
+              Need help? <a href="mailto:support@ukwebtools.com"><b>support@ukwebtools.com</b></a>
+            </div>
+          </div>
+
+          <div class="pp-footlinks" aria-label="Footer links">
+            <a href="terms.html">Terms</a>
+            <a href="privacy.html" aria-current="page">Privacy</a>
+            <a href="refunds.html">Refund Policy</a>
+            <a href="reviews.html">Reviews</a>
+            <a href="faq.html">FAQ</a>
+            <a href="help.html">How to use</a>
+          </div>
+        </div>
+
+        <div class="pp-footbottom">
+          <div>© <span id="yr"></span> UKwebtools • ProfitPilot</div>
+          <div><a href="index.html"><b>Home</b></a></div>
         </div>
       </footer>
     </div>
@@ -309,10 +386,10 @@
     document.getElementById("yr").textContent = new Date().getFullYear();
     document.getElementById("d").textContent = new Date().toLocaleDateString();
 
-    // Auth UI
-    const userChip = document.getElementById("ppUserChip");
-    const authBtn = document.getElementById("ppAuthBtn");
-    const openBtn = document.getElementById("ppOpenBtn");
+    // Header auth UI
+    const userChip  = document.getElementById("ppUserChip");
+    const authBtn   = document.getElementById("ppAuthBtn");
+    const openBtn   = document.getElementById("ppOpenBtn");
     const logoutBtn = document.getElementById("ppLogoutBtn");
 
     function safeText(s){ return String(s || "").replace(/\s+/g, " ").trim(); }
@@ -323,15 +400,15 @@
 
       if (email){
         userChip.style.display = "inline-flex";
-        userChip.textContent = email;
-        userChip.title = email;
+        userChip.textContent = "Signed in";
+        userChip.title = "You are signed in";
 
         authBtn.style.display = "none";
         openBtn.style.display = "inline-flex";
         logoutBtn.style.display = "inline-flex";
       } else {
         userChip.style.display = "none";
-        userChip.textContent = "Signed in";
+        userChip.textContent = "—";
         userChip.title = "";
 
         authBtn.style.display = "inline-flex";
@@ -342,8 +419,8 @@
 
     logoutBtn.addEventListener("click", async (e)=>{
       e.preventDefault();
-      await supabase.auth.signOut();
-      location.href = "login.html";
+      try { await supabase.auth.signOut(); }
+      finally { location.href = "login.html"; }
     });
 
     await refreshAuthUI();
