--- a/privacy.html
+++ b/privacy.html
@@ -66,7 +66,7 @@
     .wrap{max-width:980px;margin:0 auto;padding:14px 16px 54px}
 
     /* ====== APP-STYLE HEADER ====== */
-    .pp-header{position:sticky; top:10px; z-index:100; margin:10px auto 0}
+    .pp-header{position:static; top:10px; z-index:100; margin:10px auto 0}
     .pp-headerbar{
       background:var(--h-bg);
       border:1px solid var(--line);
@@ -363,7 +363,7 @@
             <a href="refunds.html">Refund Policy</a>
             <a href="reviews.html">Reviews</a>
             <a href="faq.html">FAQ</a>
-            <a href="help.html">How to use</a>
+  
           </div>
         </div>
 
