--- a/refunds.html
+++ b/refunds.html
@@ -70,7 +70,7 @@
     .pp-wrap{max-width:920px;margin:0 auto;padding:0 14px}
 
     /* Header */
-    .pp-header{position:sticky; top:10px; z-index:100; margin:14px auto 0}
+    .pp-header{position:static; top:10px; z-index:100; margin:14px auto 0}
     .pp-headerbar{
       background:var(--h-bg);
       border:1px solid var(--line);
@@ -352,7 +352,7 @@
           <a href="https://profitpilot.ukwebtools.com/index.html">Home</a>
           <a href="https://profitpilot.ukwebtools.com/pricing.html">Pricing</a>
           <a href="https://profitpilot.ukwebtools.com/reviews.html">Reviews</a>
-          <a href="https://profitpilot.ukwebtools.com/refunds.html">Refund Policy</a>
+        
           <a href="https://profitpilot.ukwebtools.com/faq.html">FAQ</a>
           <a href="https://profitpilot.ukwebtools.com/terms.html">Terms &amp; Conditions</a>
           <a href="https://profitpilot.ukwebtools.com/privacy.html">Privacy</a>
