--- a/terms.html
+++ b/terms.html
@@ -14,179 +14,178 @@
     :root{
       --bg:#f7f9fc; --bg2:#eef3ff;
       --txt:#0b1220; --muted:#5b6474;
-      --card:rgba(255,255,255,.75); --line:rgba(16,24,40,.10);
+      --card:rgba(255,255,255,.80);
+      --line:rgba(16,24,40,.10);
       --accent:#0ea5a4; --accent2:#4f46e5;
       --shadow:0 14px 36px rgba(16,24,40,.08);
-      --shadow2:0 8px 22px rgba(16,24,40,.06);
+      --shadow2:0 16px 44px rgba(16,24,40,.10);
       --radius:22px;
-
-      --f-bg:#0b0f14;
-      --f-line:rgba(255,255,255,.10);
-      --f-txt:rgba(255,255,255,.92);
-      --f-muted:rgba(255,255,255,.68);
+      --h-bg:rgba(255,255,255,.78);
     }
+
     *{box-sizing:border-box}
+    html{scroll-behavior:smooth}
     body{
-      margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:var(--txt);
+      margin:0;
+      font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+      color:var(--txt);
       background:
         radial-gradient(900px 520px at 16% 0%, rgba(14,165,164,.14), transparent 55%),
         radial-gradient(900px 520px at 84% 0%, rgba(79,70,229,.12), transparent 55%),
         linear-gradient(180deg,var(--bg2),var(--bg));
     }
-    a{text-decoration:none}
-    a.link{color:var(--accent);font-weight:900}
-    a.link:hover{text-decoration:underline}
 
-    .wrap{max-width:980px;margin:0 auto;padding:18px 16px 24px}
+    a{color:var(--accent);text-decoration:none}
+    a:hover{text-decoration:underline}
+    :focus-visible{outline:3px solid rgba(79,70,229,.55);outline-offset:3px;border-radius:12px}
 
-    /* NAV */
-    .pp-navwrap{max-width:1200px;margin:0 auto;padding:14px 0;position:relative;z-index:50}
-    .pp-nav{display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap}
-    .pp-left,.pp-right{display:flex;gap:10px;flex-wrap:wrap;align-items:center}
-    .pp-btn{
-      padding:10px 14px;border-radius:999px;border:1px solid rgba(16,24,40,.10);
-      background:#fff;font-weight:900;color:#0b1220;
-      box-shadow:0 8px 18px rgba(16,24,40,.06);
-      display:inline-flex;gap:8px;align-items:center;
-      transition:transform .08s ease;
+    .wrap{max-width:980px;margin:0 auto;padding:14px 16px 54px}
+
+    /* ====== APP-STYLE STICKY HEADER ====== */
+    .pp-header{position:sticky; top:10px; z-index:100; margin:10px auto 0}
+    .pp-headerbar{
+      background:var(--h-bg);
+      border:1px solid var(--line);
+      border-radius:18px;
+      box-shadow:0 10px 30px rgba(16,24,40,.08);
+      backdrop-filter:blur(10px);
+      padding:10px;
     }
-    .pp-btn:hover{transform:translateY(-1px)}
+    .pp-row{display:flex;align-items:center;gap:12px;flex-wrap:nowrap}
+    .pp-brand{display:flex;align-items:center;gap:10px;flex:0 0 auto; min-width:200px}
+    .pp-logo{
+      width:40px;height:40px;border-radius:14px;
+      background:linear-gradient(135deg, rgba(14,165,164,.20), rgba(79,70,229,.16));
+      border:1px solid var(--line);
+      display:flex;align-items:center;justify-content:center;
+      font-weight:1000; user-select:none;
+      color:var(--txt);
+    }
+    .pp-title{font-weight:1000;line-height:1.05;color:var(--txt)}
+    .pp-sub{font-size:12px;color:var(--muted);font-weight:700;margin-top:3px}
+
+    .pp-nav{
+      display:flex;align-items:center;gap:10px;
+      flex:1 1 auto; justify-content:flex-end;
+      overflow-x:auto; -webkit-overflow-scrolling:touch;
+      padding:2px 4px; scrollbar-width:thin;
+    }
+    .pp-nav::-webkit-scrollbar{height:8px}
+    .pp-nav::-webkit-scrollbar-thumb{background:rgba(16,24,40,.14);border-radius:999px}
+
+    .pp-btn{
+      padding:10px 14px;border-radius:999px;border:1px solid var(--line);
+      background:rgba(255,255,255,.92);color:var(--txt);
+      font-weight:900;
+      box-shadow:0 8px 18px rgba(16,24,40,.06);
+      display:inline-flex;gap:8px;align-items:center;white-space:nowrap;
+      transition:transform .08s ease;
+      cursor:pointer;
+    }
+    .pp-btn:hover{transform:translateY(-1px);text-decoration:none}
     .pp-btn:active{transform:translateY(0)}
-    .pp-primary{
+    .pp-btn.ghost{background:transparent;box-shadow:none}
+    .pp-btn.primary{
       border:none;color:#fff;
       background:linear-gradient(135deg,var(--accent),var(--accent2));
-      box-shadow:0 14px 28px rgba(79,70,229,.16);
+      box-shadow:0 16px 34px rgba(79,70,229,.16);
     }
-    .pp-active{
-      border-color:rgba(14,165,164,.35);
-      background:rgba(14,165,164,.08);
-    }
-    .pp-crumbs{
-      margin-top:10px;
-      font-size:12.5px;
-      color:rgba(16,24,40,.62);
-      display:flex;gap:6px;flex-wrap:wrap;align-items:center;
-    }
-    .pp-crumbs a{color:rgba(14,165,164,.95);font-weight:900}
-    .pp-sep{opacity:.55}
 
+    @media(max-width:760px){
+      .pp-sub{display:none}
+      .pp-brand{min-width:auto}
+    }
+
+    /* ====== CONTENT CARD ====== */
     .card{
       margin-top:14px;
       background:var(--card);
       border:1px solid var(--line);
       border-radius:var(--radius);
       padding:20px;
-      box-shadow:var(--shadow);
+      box-shadow:var(--shadow2);
     }
     h1{margin:0 0 8px;font-size:28px;letter-spacing:-.02em}
     h2{margin:20px 0 8px;font-size:18px}
-    p,li{color:var(--muted);line-height:1.75}
+    p,li{color:rgba(16,24,40,.70);line-height:1.75}
     ul{margin:8px 0 0;padding-left:18px}
-    .meta{font-size:12px;color:rgba(16,24,40,.62);line-height:1.6;margin:0 0 12px}
+    .meta{font-size:12.5px;color:rgba(16,24,40,.62);line-height:1.6;margin:0 0 12px}
 
-    /* FOOTER (crawl-friendly + policy links) */
-    .pp-footer{
-      margin-top:18px;
-      background:radial-gradient(900px 520px at 20% 0%, rgba(94,234,212,.10), transparent 55%),
-                 radial-gradient(900px 520px at 80% 0%, rgba(96,165,250,.10), transparent 55%),
-                 var(--f-bg);
-      border-top:1px solid rgba(255,255,255,.08);
-      padding:22px 0;
-    }
-    .pp-footbox{
-      border:1px solid var(--f-line);
-      background:rgba(255,255,255,.04);
-      border-radius:18px;
-      padding:16px;
-      max-width:980px;
-      margin:0 auto;
+    /* ====== CLEAN FOOTER (MATCHES APP STYLE) ====== */
+    .pp-foot{
+      margin-top:18px;padding-top:14px;border-top:1px solid var(--line);
     }
     .pp-footgrid{
       display:grid;
-      grid-template-columns:1.15fr .85fr;
-      gap:16px;
+      grid-template-columns:1.2fr .8fr;
+      gap:12px;
       align-items:start;
-      padding:0 14px;
     }
-    @media(max-width:880px){.pp-footgrid{grid-template-columns:1fr}}
-    .pp-footbrand b{color:var(--f-txt);font-weight:1000}
+    @media(max-width:820px){ .pp-footgrid{grid-template-columns:1fr} }
+    .pp-footbrand{color:var(--txt);font-weight:1000}
     .pp-footmut{
-      margin-top:8px;
-      color:var(--f-muted);
-      font-size:12.6px;
-      line-height:1.75;
-      max-width:760px;
-      font-weight:650;
+      margin-top:6px;
+      color:rgba(16,24,40,.62);
+      font-size:12.5px;
+      line-height:1.7;
     }
-    .pp-footmut a{color:rgba(94,234,212,.95);font-weight:900}
     .pp-footlinks{
-      display:flex;flex-wrap:wrap;gap:10px;
-      justify-content:flex-end;
+      display:flex;flex-wrap:wrap;gap:8px;justify-content:flex-end;
     }
-    @media(max-width:880px){.pp-footlinks{justify-content:flex-start}}
+    @media(max-width:820px){ .pp-footlinks{justify-content:flex-start} }
     .pp-footlinks a{
-      padding:9px 12px;border-radius:999px;
-      border:1px solid rgba(255,255,255,.10);
-      background:rgba(255,255,255,.06);
-      color:var(--f-txt);
-      font-weight:900;
-      display:inline-flex;align-items:center;gap:8px;
-      transition:transform .08s ease;
+      padding:8px 10px;border-radius:999px;
+      border:1px solid var(--line);
+      background:rgba(255,255,255,.86);
+      font-weight:850;
+      color:var(--txt);
     }
-    .pp-footlinks a:hover{transform:translateY(-1px)}
     .pp-footbottom{
-      margin-top:14px;padding-top:14px;
-      border-top:1px solid rgba(255,255,255,.10);
-      display:flex;justify-content:space-between;gap:10px;flex-wrap:wrap;align-items:center;
-      color:rgba(255,255,255,.72);
-      font-size:12.5px;line-height:1.75;
-      padding:0 14px;
+      margin-top:12px;padding-top:12px;
+      border-top:1px solid rgba(16,24,40,.08);
+      color:rgba(16,24,40,.62);
+      font-size:12.5px;
+      line-height:1.7;
+      display:flex;
+      justify-content:space-between;
+      gap:10px;
+      flex-wrap:wrap;
+      align-items:center;
     }
-    .pp-footbottom a{color:rgba(94,234,212,.95);font-weight:900}
+
+    @media (prefers-reduced-motion: reduce){
+      html{scroll-behavior:auto}
+      .pp-btn{transition:none}
+      .pp-btn:hover{transform:none}
+    }
   </style>
 </head>
 
 <body>
   <div class="wrap">
 
-    <!-- NAV -->
-    <div class="pp-navwrap" role="navigation" aria-label="Primary">
-      <div class="pp-nav">
-        <div class="pp-left">
-          <a class="pp-btn" href="https://ukwebtools.com/">← UKwebtools</a>
-          <a class="pp-btn" href="https://profitpilot.ukwebtools.com/index.html">Home</a>
-          <a class="pp-btn" href="https://profitpilot.ukwebtools.com/reviews.html">Reviews</a>
-          <a class="pp-btn" href="https://profitpilot.ukwebtools.com/privacy.html">Privacy</a>
-          <a class="pp-btn" href="https://profitpilot.ukwebtools.com/refunds.html">Refunds</a>
-          <a class="pp-btn pp-active" href="https://profitpilot.ukwebtools.com/terms.html">Terms</a>
-        </div>
+    <!-- ====== SIMPLE APP HEADER (STICKY) ====== -->
+    <header class="pp-header" role="navigation" aria-label="Primary">
+      <div class="pp-headerbar">
+        <div class="pp-row">
+          <div class="pp-brand" aria-label="ProfitPilot">
+            <div class="pp-logo" aria-hidden="true">PP</div>
+            <div>
+              <div class="pp-title">ProfitPilot</div>
+              <div class="pp-sub">Independent tool by UKwebtools</div>
+            </div>
+          </div>
 
-        <div class="pp-right">
-          <a class="pp-btn pp-primary" href="https://profitpilot.ukwebtools.com/login.html">Account</a>
+          <nav class="pp-nav" aria-label="Main">
+            <a class="pp-btn ghost" href="index.html">Home</a>
+            <a class="pp-btn" href="help.html">How to use</a>
+            <a class="pp-btn primary" href="login.html">Account</a>
+          </nav>
         </div>
       </div>
+    </header>
 
-      <div class="pp-crumbs" aria-label="Breadcrumb">
-        <a class="link" href="https://ukwebtools.com/">UKwebtools</a>
-        <span class="pp-sep">›</span>
-        <a class="link" href="https://profitpilot.ukwebtools.com/index.html">ProfitPilot</a>
-        <span class="pp-sep">›</span>
-        <span>Terms</span>
-      </div>
-
-      <script type="application/ld+json">
-      {
-        "@context":"https://schema.org",
-        "@type":"BreadcrumbList",
-        "itemListElement":[
-          {"@type":"ListItem","position":1,"name":"UKwebtools","item":"https://ukwebtools.com/"},
-          {"@type":"ListItem","position":2,"name":"ProfitPilot","item":"https://profitpilot.ukwebtools.com/index.html"},
-          {"@type":"ListItem","position":3,"name":"Terms","item":"https://profitpilot.ukwebtools.com/terms.html"}
-        ]
-      }
-      </script>
-    </div>
-
+    <!-- ====== CONTENT ====== -->
     <div class="card">
       <h1>Terms of Use</h1>
       <p class="meta"><b>Last updated:</b> <span id="d">08 February 2026</span></p>
@@ -223,7 +222,7 @@
       <p>
         Refunds are handled in accordance with Paddle’s Checkout Buyer Terms and applicable consumer protection laws.
         If you are purchasing as a consumer, you may request a refund within <b>14 days</b> of purchase (the day after the transaction is completed).
-        Details and refund instructions are available on our <a class="link" href="https://profitpilot.ukwebtools.com/refunds.html">Refund Policy</a> page.
+        Details and refund instructions are available on our <a href="refunds.html"><b>Refund Policy</b></a> page.
       </p>
 
       <h2>6) Reviews</h2>
@@ -241,7 +240,7 @@
 
       <h2>8) Support</h2>
       <p>
-        Email: <a class="link" href="mailto:support@ukwebtools.com">support@ukwebtools.com</a>
+        Email: <a href="mailto:support@ukwebtools.com"><b>support@ukwebtools.com</b></a>
       </p>
 
       <h2>9) Governing law</h2>
@@ -249,36 +248,35 @@
         These Terms are governed by the laws of England and Wales. Courts of England and Wales will have exclusive jurisdiction,
         except where consumer protection laws provide otherwise.
       </p>
-    </div>
-  </div>
 
-  <footer class="pp-footer" role="contentinfo">
-    <div class="pp-footbox">
-      <div class="pp-footgrid">
-        <div class="pp-footbrand">
-          <div><b>ProfitPilot</b></div>
-          <div class="pp-footmut">
-            <b>Legal entity:</b> Stonevia Commerce.<br>
-            Need help? <a href="mailto:support@ukwebtools.com">support@ukwebtools.com</a>
+      <!-- ====== CLEAN FOOTER (MATCHING) ====== -->
+      <footer class="pp-foot" role="contentinfo">
+        <div class="pp-footgrid">
+          <div>
+            <div class="pp-footbrand">ProfitPilot</div>
+            <div class="pp-footmut">
+              <b>Legal entity:</b> Stonevia Commerce.<br>
+              Need help? <a href="mailto:support@ukwebtools.com"><b>support@ukwebtools.com</b></a>
+            </div>
+          </div>
+
+          <div class="pp-footlinks" aria-label="Footer links">
+            <a href="privacy.html">Privacy</a>
+            <a href="refunds.html">Refund Policy</a>
+            <a href="terms.html" aria-current="page">Terms</a>
+            <a href="faq.html">FAQ</a>
+            <a href="reviews.html">Reviews</a>
+            <a href="pricing.html">Pricing</a>
           </div>
         </div>
 
-        <div class="pp-footlinks" aria-label="Footer links">
-          <a href="https://profitpilot.ukwebtools.com/index.html">Home</a>
-          <a href="https://profitpilot.ukwebtools.com/pricing.html">Pricing</a>
-          <a href="https://profitpilot.ukwebtools.com/refunds.html">Refund Policy</a>
-          <a href="https://profitpilot.ukwebtools.com/terms.html">Terms</a>
-          <a href="https://profitpilot.ukwebtools.com/privacy.html">Privacy</a>
-          <a href="https://profitpilot.ukwebtools.com/faq.html">FAQ</a>
+        <div class="pp-footbottom">
+          <div>© <span id="yr"></span> UKwebtools • ProfitPilot</div>
+          <div><a href="https://ukwebtools.com/" rel="nofollow"><b>UKwebtools</b></a></div>
         </div>
-      </div>
-
-      <div class="pp-footbottom">
-        <div>© <span id="yr"></span> UKwebtools • ProfitPilot</div>
-        <div><a href="https://ukwebtools.com/" rel="nofollow">UKwebtools</a></div>
-      </div>
+      </footer>
     </div>
-  </footer>
+  </div>
 
   <script>
     document.getElementById("yr").textContent = new Date().getFullYear();
