--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     .pp-wrap{max-width:1150px;margin:0 auto;padding:0 14px}
 
     /* ================= HEADER ================= */
-    .pp-header{position:sticky; top:10px; z-index:100; margin:14px auto 0}
+    .pp-header{position:static; top:10px; z-index:100; margin:14px auto 0}
     .pp-headerbar{
       background:var(--h-bg);
       border:1px solid var(--line);
