--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
     const supabase = createClient(SUPABASE_URL, SUPABASE_ANON);
 
     // ✅ Paddle Hosted Checkout links
-const CHECKOUT_URL_PRO = "https://pay.paddle.io/hsc_01kjcns56g20crt51z8j2j9mqc_rrmv98b3szdmp9neyaxw5qmd5cjcb7ya";
+const CHECKOUT_URL_PRO = "https://pay.paddle.io/hsc_01kjcns56g20crt51z8j2j9mqc_rrmv98b3szdmp9neyaxw5qmd5cjcb7ya?discount=PP30PH";
 const CHECKOUT_URL_PROPLUS = "#"; // add PRO+ later
 
 const buyBtn = document.getElementById("buyBtn");
